--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,209 @@
+body {
+  background-color: rgb(231, 231, 17);
+}
 .App {
+  max-width: 1440px;
+  display: grid;
+  grid-template-columns: 1fr 8fr;
+  grid-template-rows: 1fr 10fr;
+  gap: 3%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.logo {
+  grid-column: span 2;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: green;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  text-transform: uppercase;
+  letter-spacing: 1px solid red;
+  color: rgb(231, 231, 17);
 }
 
-.App-link {
-  color: #61dafb;
+.Sidebar {
+  background-color: green;
+  display: flex;
+}
+.Sidebar li {
+  list-style-type: none;
+}
+.Sidebar_Page {
+  text-transform: uppercase;
+  color: rgb(231, 231, 17);
+  margin-left: -50%;
+  cursor: pointer;
+  margin-bottom: 20%;
+  text-decoration: none;
+}
+.Sidebar_Page:hover {
+  transition: all 100ms ease-in;
+  text-decoration: underline;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ListItems {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.Search {
+  display: block;
+  max-width: 70%;
+  flex-direction: column;
+  min-width: 500px;
+  border: 1px solid red solid green;
+  border-radius: 20px;
+  padding: 1%;
+  background-color: #fff;
+}
+.Search span {
+  width: 10%;
+  margin-right: 1%;
+  margin-left: 1%;
+}
+.Search span::after {
+  content: "|";
+  color: green;
+}
+.Search input {
+  width: 90%;
+  border: none;
+}
+.Search input:focus {
+  border: none;
+  font-weight: 500;
+  text-transform: uppercase;
+  outline: none;
+  color: green;
+  border-bottom: green 2px solid;
+}
+.Filter {
+  width: 100%;
+  justify-content: center;
+  margin-top: 2%;
+  display: flex;
+  gap: 2%;
+}
+.Filter span {
+  display: inline-block;
+  color: green;
+  font-weight: 700;
+  margin-top: 1%;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+.Filter select {
+  width: 30%;
+  border-radius: 20px;
+  padding: 0.6%;
+  background-color: green;
+  color: rgb(231, 231, 17);
+  font-size: 18px;
+  flex-direction: column;
+  text-transform: uppercase;
+  letter-spacing: 1px solid red;
+}
+.Filter option {
+  font-size: 18px;
+}
+
+.Items {
+  margin-top: 1%;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3%;
+  /* border: 1px solid green; */
+  row-gap: 20px;
+  padding: 3%;
+  justify-content: center;
+  width: 100%;
+}
+
+.Item {
+  width: 200px;
+  border: 1px solid green;
+  padding: 2%;
+  min-height: 200px;
+}
+.Item img {
+  width: 200px;
+  height: 200px;
+  /* height: min-content; */
+  object-fit: cover;
+}
+.Item input {
+  border: none;
+  background-color: transparent;
+  color: green;
+  text-align: center;
+  width: 20px;
+  margin: 0 1% 3% 1%;
+  outline: none;
+}
+.amount {
+  display: inline-block;
+  border: none;
+  /* border-radius: 50%; */
+}
+.AddItem {
+  display: block;
+  border-radius: 15px;
+  padding: 1% 2%;
+  background-color: green;
+  color: #fff;
+  font-weight: 500;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.Cart {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 100%;
+  /* border: 1px solid red; */
+  padding: 3%;
+}
+.Cart h1 {
+  text-align: center;
+  text-transform: uppercase;
+  color: green;
+}
+.Cart li {
+  list-style-type: circle;
+}
+.Cart li:not(:first-child) {
+  margin-top: 1%;
+}
+.Cart h2 {
+  color: green;
+  text-decoration: underline;
+}
+
+.buttons {
+  margin-top: 2%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2%;
+  justify-content: center;
+}
+.buttons button {
+  border-radius: 15px;
+  padding: 0 2%;
+  display: block;
+  background-color: transparent;
+  color: green;
+  border: 1px solid green;
+}
+.buttons button:hover {
+  background-color: green;
+  color: #fff;
+  border: 1px solid white;
+  transition: all 100ms ease-in;
 }
